--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
          <br>
          <br>
          <p>J'ai commencé à toucher au developpement web il y a un an. J'ai développé mon CV en HTML, CSS et JS.
-         Avec ce premier travail, j'ai appris à lié les fichiers CSS avec les fichiers HTML. J'ai de plus compris comment fonctionné les classes
-         afin de mettre des effets sur les balises HTML.</p>
+         Avec ce premier travail, j'ai appris à lier les fichiers CSS avec les fichiers HTML. J'ai de plus compris comment fonctionnaient les classes
+         afin de mettre des effets sur les balises HTML grace au CSS.</p>
          <br>
          <br>
         <div class="container3">
